# HPMS

./: .gitignore  CMakeLists.txt  LICENSE  README.md
code/common/: Debug.h  FileSystem.cpp  FileSystem.h  HPMSObject.h  Utils.cpp  Utils.h
code/core/: Actor.h  AdvModelItem.cpp  AdvModelItem.h  Animation.cpp  Animation.h  CGAPIManager.h  Camera.h  CustomLogic.h  Entity.h  FrameBuffer.h  FrustumCullingCalculator.cpp  FrustumCullingCalculator.h  LayerPicture.h  Material.h  Mesh.cpp  Mesh.h  Names.h  Pipeline.h  PipelineUtils.cpp  PipelineUtils.h  PostFX.h  RenderObject.h  Renderer.h  ResourceCache.h  ResourceItemsCache.cpp  ResourceItemsCache.h  Scene.cpp  Scene.h  SceneNode.h  Shader.h  Simulator.h  StdModelItem.cpp  StdModelItem.h  Texture.h  Transformation.h  Window.h
code/core/gl/: GLFrameBuffer.cpp  GLFrameBuffer.h  GLRenderer.cpp  GLRenderer.h  GLShader.cpp  GLShader.h  GLWindow.cpp  GLWindow.h
code/core/gl/fx/: GLDefaultPostFX.h
code/core/items/: Entity.h  Picture.h  SceneNode.cpp  SceneNode.h
code/core/techniques/: R25DPipeline.cpp  R25DPipeline.h
code/logic/: CalcUtils.cpp  CalcUtils.h  LogicItemsCache.cpp  LogicItemsCache.h  Room.h  RoomModelItem.h  SectorUtils.cpp  SectorUtils.h
code/logic/items/: Collisor.cpp  Collisor.h  WalkMap.h
code/runtime/: GameState.h  HPMSLogic.h  Main.cpp
code/runtime/input/: KeyEvent.h
code/runtime/states/: R25DGameState.h
code/runtime/vm/: LuaExtensions.h  LuaRegister.h  LuaVM.h
code/test/: HPMSMainTest.cpp  LuaVMTest.cpp  gltest_main.cpp  hpmsfs_test.cpp  math_test.cpp  room_converter_test.cpp
code/tools/: AssimpImporter.cpp  AssimpImporter.h  AssimpToHDATConverter.cpp  AssimpToHDATConverterMain.cpp  RoomImporter.cpp  RoomImporter.h  RoomToHDATConverter.cpp  viewer_test.cpp
data/: GAME.hpak  HPMS.cfg
data/in/: RoomTemplate.xml
data/resources/models/: 01.hdat  Carnby_textured_anim_walk.dae  CrippleAnim.dae  Only_Spider_with_Animations_Export.dae
data/scripts/: Common.lua  Config.lua  Test.lua
data/shaders/: DepthMask.vert  Picture.frag  Picture.vert  PostFX.frag  Scene.frag  Scene.vert
data/shaders_test/: Scene.vert  frag.glsl  vertex.glsl
dependencies/: CMakeLists.txt
dependencies/ASSIMP/code/: HMPLoader.cpp  IFCBoolean.cpp  SceneCombiner.cpp
dependencies/ASSIMP/contrib/zlib/: deflate.h
dependencies/ASSIMP/doc/: Doxyfile  Doxyfile_Cmd
dependencies/ASSIMP/port/PyAssimp/pyassimp/: structs.py
dependencies/ASSIMP/samples/DevIL/include/IL/: ilu_region.h
dependencies/ASSIMP/scripts/IFCImporter/: entitylist.txt
dependencies/ASSIMP/test/models-nonbsd/FBX/2013_ASCII/: COLLADA.fbx
dependencies/ASSIMP/test/models/Collada/: COLLADA.dae  COLLADA_triangulate.dae
dependencies/ASSIMP/test/models/OpenGEX/: collada.ogex
dependencies/ASSIMP/tools/assimp_view/: Background.cpp
dependencies/GLFW/include/GLFW/: glfw3native.h
dependencies/GLFW/src/: CMakeLists.txt  internal.h  vulkan.c  win32_window.c
dependencies/LUA/: CMakeLists.txt
dependencies/LUA/cmake/: lua.cmake
dependencies/PHYSFS/docs/: Doxyfile
dependencies/PHYSFS/src/: physfs.c  physfs_archiver_grp.c  physfs_archiver_vdf.c  physfs_archiver_wad.c
docs/: HPMS - Engine.docx  HPMS - VM.docx  HPMSEngine.docx  VMDoc.txt
